--- a/style.css
+++ b/style.css
@@ -213,3 +213,42 @@ footer p {
   color: rgb(0, 68, 255)
 }
 
+@media (max-width: 768px) {
+  header ul {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0px 5px 10px #ccc;
+    padding: 10px;
+  }
+
+  header ul.active {
+    display: flex;
+  }
+
+  .menu-icon {
+    display: block;
+  }
+
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .bannerCentro {
+    text-align: center;
+  }
+
+  .bannerCentro img {
+    width: 100%;
+  }
+
+  .carrossel {
+    max-width: 100%;
+  }
+}
+
