--- a/style.css
+++ b/style.css
@@ -37,6 +37,73 @@ header{
     color: #333;
     text-decoration: none;
   }
+  .menu-icon {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+  }
+
+  /*side menu*/
+
+/* Ícone hamburguer */
+.menu-icon {
+  font-size: 30px;
+  cursor: pointer;
+}
+
+/* MENU LATERAL */
+.side-menu {
+  position: fixed;
+  top: 0;
+  left: -250px; /* Escondido por padrão */
+  width: 250px;
+  height: 100%;
+  background-color: white;
+  box-shadow: 5px 0 10px rgba(0, 0, 0, 0.2);
+  transition: left 0.3s ease-in-out;
+  padding-top: 20px;
+  z-index: 1100;
+}
+
+/* Mostrar menu */
+.side-menu.open {
+  left: 0;
+}
+
+/* Botão fechar */
+.close-btn {
+  background: none;
+  border: none;
+  font-size: 25px;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+/* Estilização dos links do menu */
+.side-menu ul {
+  list-style: none;
+  padding: 20px;
+}
+
+.side-menu ul li {
+  padding: 15px;
+  text-align: center;
+}
+
+.side-menu ul li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 18px;
+  display: block;
+  transition: 0.3s;
+}
+
+.side-menu ul li a:hover {
+  color: brown;
+}
+
 
 
 .container {
@@ -212,14 +279,41 @@ footer p {
   text-align: center;
   color: rgb(0, 68, 255)
 }
+
 @media (max-width: 768px){
   .bannerText {
     font-size: 1rem;
-      text-align:left;
+    text-align:left;
   }
   .bannerCentro img {
     width: 50%;
   }
-}
+  .menu-icon {
+    display: block;
+  }
 
+  /* Esconder menu no mobile */
+  .menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0px 5px 10px #ccc;
+    padding: 10px;
+    text-align: center;
+  }
+
+  /* Mostrar menu quando ativo */
+  .menu.active {
+    display: flex;
+    animation: slideIn 0.3s ease-in-out;
+  }
+
+  header ul li {
+    padding: 10px;
+  }
+}
 
