--- a/style.css
+++ b/style.css
@@ -103,6 +103,21 @@ header{
 .side-menu ul li a:hover {
   color: brown;
 }
+.overlay {
+  display: none; /* Escondido por padrão */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
+  z-index: 999; /* Fica abaixo do menu */
+}
+
+/* Mostrar o overlay quando o menu estiver aberto */
+.overlay.show {
+  display: block;
+}
 
 
 
