--- a/style.css
+++ b/style.css
@@ -333,5 +333,12 @@ footer p {
      #mainhead {
     display: none;
   }
+    .icons a img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+  }
 }
 
