--- a/style.css
+++ b/style.css
@@ -43,6 +43,19 @@ header{
     cursor: pointer;
   }
 
+.btnAcess {
+    border-radius: 50px;
+    padding: 6px;
+    border: 3px solid #B95151;
+    width: 90px;
+    cursor: pointer;
+    background-color: #fff;
+  }
+  .btnAcess:hover {
+    background-color: #B95151;
+    color: #fff;
+  }
+
   /*side menu*/
 
 /* Ícone hamburguer */
