--- a/curso1.css
+++ b/curso1.css
@@ -22,14 +22,11 @@ header{
   header img{
     width: 200px;
   }
-  header ul li{
+  header a{
     position: relative;
     float: left;
     list-style: none;
     cursor: pointer;
-    
-  }
-  header ul li a{
     font-size: 20px;
     padding: 20px;
     display: flex;
@@ -41,6 +38,19 @@ header{
   font-size: 30px;
   cursor: pointer;
 }
+
+.btnAcess {
+    border-radius: 50px;
+    padding: 6px;
+    border: 3px solid #B95151;
+    width: 90px;
+    cursor: pointer;
+    background-color: #fff;
+  }
+  .btnAcess:hover {
+    background-color: #B95151;
+    color: #fff;
+  }
 
 /*side menu*/
 
@@ -76,22 +86,22 @@ border: none;
 font-size: 25px;
 cursor: pointer;
 position: absolute;
-top: 10px;
+top: 5px;
 right: 10px;
 }
 
 /* Estilização dos links do menu */
-.side-menu ul {
+.side-menu {
 list-style: none;
 padding: 20px;
 }
 
-.side-menu ul li {
+.side-menu a{
 padding: 15px;
 text-align: center;
 }
 
-.side-menu ul li a {
+.side-menu a {
 text-decoration: none;
 color: #333;
 font-size: 18px;
@@ -99,7 +109,7 @@ display: block;
 transition: 0.3s;
 }
 
-.side-menu ul li a:hover {
+.side-menu a:hover {
 color: brown;
 }
 .overlay {
@@ -312,7 +322,7 @@ footer p {
     animation: slideIn 0.3s ease-in-out;
   }
 
-  header ul li {
+  header a {
     padding: 10px;
   }
   #mainhead {
