--- a/curso1.css
+++ b/curso1.css
@@ -43,8 +43,9 @@ header{
     border-radius: 50px;
     padding: 6px;
     border: 3px solid #B95151;
-    width: 60px;
+    width: 90px;
     cursor: pointer;
+    font-size: 20px;
     background-color: #fff;
   }
   .btnAcess:hover {
