--- a/about.css
+++ b/about.css
@@ -23,25 +23,35 @@ header:hover {
 header img{
   width: 200px;
 }
-header ul li{
-  position: relative;
-  float: left;
-  list-style: none;
-  cursor: pointer;
-  
-}
-header ul li a{
-  font-size: 20px;
-  padding: 20px;
-  display: flex;
-  color: #333;
-  text-decoration: none;
-}
-.menu-icon {
-  display: none;
-  font-size: 30px;
-  cursor: pointer;
-}
+header a{
+    position: relative;
+    float: left;
+    list-style: none;
+    cursor: pointer;
+    font-size: 20px;
+    padding: 20px;
+    display: flex;
+    color: #333;
+    text-decoration: none;
+  }
+  .menu-icon {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+  }
+
+.btnAcess {
+    border-radius: 50px;
+    padding: 6px;
+    border: 3px solid #B95151;
+    width: 90px;
+    cursor: pointer;
+    background-color: #fff;
+  }
+  .btnAcess:hover {
+    background-color: #B95151;
+    color: #fff;
+  }
 
 /*side menu*/
 
