--- a/curso2.css
+++ b/curso2.css
@@ -146,10 +146,12 @@ display: block;
     margin-right: auto;
 }
 .midianep {
-    width: 300px;
+    width: 400px;
     position: relative;
     margin-left: auto;
     background-color: #B95151;
+
+}
 
 }
 
