--- a/curso2.css
+++ b/curso2.css
@@ -22,11 +22,14 @@ header{
   header img{
     width: 200px;
   }
-  header a{
+  header ul li{
     position: relative;
     float: left;
     list-style: none;
     cursor: pointer;
+    
+  }
+  header ul li a{
     font-size: 20px;
     padding: 20px;
     display: flex;
@@ -38,95 +41,82 @@ header{
     font-size: 30px;
     cursor: pointer;
   }
-
-.btnAcess {
-    border-radius: 50px;
-    padding: 6px;
-    border: 3px solid #B95151;
-    width: 90px;
-    cursor: pointer;
-    background-color: #fff;
+  
+  /*side menu*/
+  
+  /* Ícone hamburguer */
+  .menu-icon {
+  font-size: 30px;
+  cursor: pointer;
   }
-  .btnAcess:hover {
-    background-color: #B95151;
-    color: #fff;
+  
+  /* MENU LATERAL */
+  .side-menu {
+  position: fixed;
+  top: 0;
+  left: -250px; /* Escondido por padrão */
+  width: 250px;
+  height: 100%;
+  background-color: white;
+  box-shadow: 5px 0 10px rgba(0, 0, 0, 0.2);
+  transition: left 0.3s ease-in-out;
+  padding-top: 20px;
+  z-index: 1100;
   }
-
-/*side menu*/
-
-/* Ícone hamburguer */
-.menu-icon {
-font-size: 30px;
-cursor: pointer;
-}
-
-/* MENU LATERAL */
-.side-menu {
-position: fixed;
-top: 0;
-left: -250px; /* Escondido por padrão */
-width: 250px;
-height: 100%;
-background-color: white;
-box-shadow: 5px 0 10px rgba(0, 0, 0, 0.2);
-transition: left 0.3s ease-in-out;
-padding-top: 20px;
-z-index: 1100;
-}
-
-/* Mostrar menu */
-.side-menu.open {
-left: 0;
-}
-
-/* Botão fechar */
-.close-btn {
-background: none;
-border: none;
-font-size: 25px;
-cursor: pointer;
-position: absolute;
-top: 10px;
-right: 10px;
-}
-
-/* Estilização dos links do menu */
-.side-menu ul {
-list-style: none;
-padding: 20px;
-}
-
-.side-menu ul li {
-padding: 15px;
-text-align: center;
-}
-
-.side-menu ul li a {
-text-decoration: none;
-color: #333;
-font-size: 18px;
-display: block;
-transition: 0.3s;
-}
-
-.side-menu ul li a:hover {
-color: brown;
-}
-.overlay {
-display: none; /* Escondido por padrão */
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
-z-index: 999; /* Fica abaixo do menu */
-}
-
-/* Mostrar o overlay quando o menu estiver aberto */
-.overlay.show {
-display: block;
-}
+  
+  /* Mostrar menu */
+  .side-menu.open {
+  left: 0;
+  }
+  
+  /* Botão fechar */
+  .close-btn {
+  background: none;
+  border: none;
+  font-size: 25px;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  }
+  
+  /* Estilização dos links do menu */
+  .side-menu ul {
+  list-style: none;
+  padding: 20px;
+  }
+  
+  .side-menu ul li {
+  padding: 15px;
+  text-align: center;
+  }
+  
+  .side-menu ul li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 18px;
+  display: block;
+  transition: 0.3s;
+  }
+  
+  .side-menu ul li a:hover {
+  color: brown;
+  }
+  .overlay {
+  display: none; /* Escondido por padrão */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
+  z-index: 999; /* Fica abaixo do menu */
+  }
+  
+  /* Mostrar o overlay quando o menu estiver aberto */
+  .overlay.show {
+  display: block;
+  }
 
 
 .corpo_nep {
@@ -146,12 +136,10 @@ display: block;
     margin-right: auto;
 }
 .midianep {
-    width: 250px;
+    width: 300px;
     position: relative;
     margin-left: auto;
     background-color: #B95151;
-
-}
 
 }
 
@@ -169,7 +157,7 @@ display: block;
     width: 300px;
     position: relative;
     /* border: 1px solid #fff; */
-    height: 60vh;
+    height: 55vh;
     padding: 30px 25px;
     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
     overflow: hidden;
@@ -337,11 +325,4 @@ footer p {
   width: 150px;
   font-size: 20px
 }
-    .icons a img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-  }
 }
