--- a/curso2.css
+++ b/curso2.css
@@ -22,14 +22,11 @@ header{
   header img{
     width: 200px;
   }
-  header ul li{
+   header a{
     position: relative;
     float: left;
     list-style: none;
     cursor: pointer;
-    
-  }
-  header ul li a{
     font-size: 20px;
     padding: 20px;
     display: flex;
@@ -41,84 +38,97 @@ header{
     font-size: 30px;
     cursor: pointer;
   }
-  
-  /*side menu*/
-  
-  /* Ícone hamburguer */
-  .menu-icon {
-  font-size: 30px;
-  cursor: pointer;
+
+.btnAcess {
+    border-radius: 50px;
+    padding: 6px;
+    border: 3px solid #B95151;
+    width: 90px;
+    cursor: pointer;
+    background-color: #fff;
   }
-  
-  /* MENU LATERAL */
-  .side-menu {
-  position: fixed;
-  top: 0;
-  left: -250px; /* Escondido por padrão */
-  width: 250px;
-  height: 100%;
-  background-color: white;
-  box-shadow: 5px 0 10px rgba(0, 0, 0, 0.2);
-  transition: left 0.3s ease-in-out;
-  padding-top: 20px;
-  z-index: 1100;
-  }
-  
-  /* Mostrar menu */
-  .side-menu.open {
-  left: 0;
-  }
-  
-  /* Botão fechar */
-  .close-btn {
-  background: none;
-  border: none;
-  font-size: 25px;
-  cursor: pointer;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  }
-  
-  /* Estilização dos links do menu */
-  .side-menu ul {
-  list-style: none;
-  padding: 20px;
-  }
-  
-  .side-menu ul li {
-  padding: 15px;
-  text-align: center;
-  }
-  
-  .side-menu ul li a {
-  text-decoration: none;
-  color: #333;
-  font-size: 18px;
-  display: block;
-  transition: 0.3s;
-  }
-  
-  .side-menu ul li a:hover {
-  color: brown;
-  }
-  .overlay {
-  display: none; /* Escondido por padrão */
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
-  z-index: 999; /* Fica abaixo do menu */
-  }
-  
-  /* Mostrar o overlay quando o menu estiver aberto */
-  .overlay.show {
-  display: block;
+  .btnAcess:hover {
+    background-color: #B95151;
+    color: #fff;
   }
 
+/*side menu*/
 
+/* Ícone hamburguer */
+.menu-icon {
+font-size: 30px;
+cursor: pointer;
+}
+
+/* MENU LATERAL */
+.side-menu {
+position: fixed;
+top: 0;
+left: -250px; /* Escondido por padrão */
+width: 250px;
+height: 100%;
+background-color: white;
+box-shadow: 5px 0 10px rgba(0, 0, 0, 0.2);
+transition: left 0.3s ease-in-out;
+padding-top: 20px;
+z-index: 1100;
+}
+
+/* Mostrar menu */
+.side-menu.open {
+left: 0;
+}
+
+/* Botão fechar */
+.close-btn {
+background: none;
+border: none;
+font-size: 25px;
+cursor: pointer;
+position: absolute;
+top: 5px;
+right: 10px;
+}
+
+/* Estilização dos links do menu */
+.side-menu {
+list-style: none;
+padding: 20px;
+}
+
+.side-menu a{
+padding: 15px;
+text-align: center;
+}
+
+.side-menu a {
+text-decoration: none;
+color: #333;
+font-size: 18px;
+display: block;
+transition: 0.3s;
+}
+
+.side-menu a:hover {
+color: brown;
+}
+.overlay {
+display: none; /* Escondido por padrão */
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
+z-index: 999; /* Fica abaixo do menu */
+}
+
+/* Mostrar o overlay quando o menu estiver aberto */
+.overlay.show {
+display: block;
+}
+
+/* informações principais*/
 .corpo_nep {
     display: flex;
     margin-top: 5px;
@@ -127,20 +137,20 @@ header{
     flex-direction: column;
     text-align: center;
     align-items: center;
-    background-color: #B95151;
+    background-color: darkgoldenrod;
     color: #fff;
 }
 .corpo_nep, h1 h2 p {
     padding: 8px;
     font-size: 25px;
     margin-right: auto;
+    text-align: justify;
 }
 .midianep {
-    width: 300px;
+    width: 250px;
     position: relative;
     margin-left: auto;
     background-color: #B95151;
-
 }
 
 
