--- a/curso2.css
+++ b/curso2.css
@@ -137,7 +137,7 @@ display: block;
     flex-direction: column;
     text-align: center;
     align-items: center;
-    background-color: darkgoldenrod;
+    background-color: #B95151;
     color: #fff;
 }
 .corpo_nep, h1 h2 p {
