--- a/about.css
+++ b/about.css
@@ -92,17 +92,17 @@ right: 10px;
 }
 
 /* Estilização dos links do menu */
-.side-menu ul {
+.side-menu {
 list-style: none;
 padding: 20px;
 }
 
-.side-menu ul li {
+.side-menu a {
 padding: 15px;
 text-align: center;
 }
 
-.side-menu ul li a {
+.side-menu a {
 text-decoration: none;
 color: #333;
 font-size: 18px;
