--- a/curso1.css
+++ b/curso1.css
@@ -190,7 +190,8 @@ display: block;
     width: 70px;
 }
 
-a button {
+.subscribe button {
+  /* display: none; */
   border-radius: 50px;
   width: 200px;
   height: 50px;
@@ -202,11 +203,11 @@ a button {
   cursor: pointer;
   margin-right: auto;
 }
-a button {
+.subscribe button{
   text-decoration: none;
   color: darkgoldenrod;
 }
-a button:hover{
+.subscribe button:hover{
   background-color: brown;
   color: #fff;
   transition: all 500ms;
