--- a/curso1.css
+++ b/curso1.css
@@ -191,7 +191,7 @@ display: block;
 }
 
 .subscribe button {
-  display: none;
+/*   display: none; */
   border-radius: 50px;
   width: 200px;
   height: 50px;
