--- a/style.css
+++ b/style.css
@@ -309,7 +309,28 @@ footer p {
   width: 300px;
   position: relative;
  margin: auto;
+}
 
+.back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: brown;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    font-size: 24px;
+    cursor: pointer;
+    display: none; /* Escondido por padrão */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+    transition: opacity 0.3s, transform 0.3s;
+}
+
+.back-to-top:hover {
+    background-color: darkgoldenrod;
+    transform: scale(1.1);
 }
 
 @media (max-width: 768px){
