--- a/about.css
+++ b/about.css
@@ -233,6 +233,29 @@ footer p {
   text-align: center;
   color: rgb(0, 68, 255)
 }
+
+.back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: brown;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    font-size: 24px;
+    cursor: pointer;
+    display: none; /* Escondido por padrão */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+    transition: opacity 0.3s, transform 0.3s;
+}
+
+.back-to-top:hover {
+    background-color: darkgoldenrod;
+    transform: scale(1.1);
+}
+
 @media (max-width: 768px){
   .bannerText {
     font-size: 1rem;
