--- a/curso2.css
+++ b/curso2.css
@@ -167,7 +167,7 @@ display: block;
     width: 300px;
     position: relative;
     /* border: 1px solid #fff; */
-    height: 60vh;
+    height: auto;
     padding: 30px 25px;
     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
     overflow: hidden;
