--- a/curso2.css
+++ b/curso2.css
@@ -144,7 +144,7 @@ display: block;
     padding: 8px;
     font-size: 25px;
     margin-right: auto;
-    text-align: justify;
+    text-align: center;
 }
 .midianep {
     width: 250px;
